# workflow-automation-engine

./: .gitignore  CONTRIBUTING.md  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  license-exceptions.txt  run_harness.sh  tests-merge.config  tests.config  vigilia.config  workflow-engine-manual-builtin.rst
configured-workflows/: automation-bash-completion.sh  automation-commands  automation-commands-documentation  automation-commands-git-rewrite.py  automation-configuration  conf.automation-configuration  workflow-project.pl
configured-workflows/automation-configuration-data/: target_servers.yml  targets.yml  workflow_filenames.yml
cpan/: cpan_install
docs/: 2023-12-18-fosdem-abstract.txt  user-guide.tex
perl/: Makefile.am
perl/Neurospaces/: Developer.pm  Tester.pm  Utilities.pm
perl/Neurospaces/Developer/: Operations.pm  Packages.pm
perl/Neurospaces/Developer/Manager/: GUI.pm
tests/: introduction.html  tests.config
tests/specifications/20_vigilia/: 30_docker.t  40_output_formats.t  41_docker_creator_output_formats.t  50_merges.t
tests/specifications/20_vigilia/10_help/: summary.yml
tests/specifications/40_workflow-automator/: 10_help-pages.t  11_error-pages.t  15_error-pages.t  20_new-project.t  25_new-project-docker.t  30_specific-features-cd.t  30_specific-features.t  32_specific-features-export-sh.t  34_specific-features-annotations.t  Dockerfile.neurospaces-testing  docker-build.bash
tests/specifications/40_workflow-automator/12_help-pages/: summary.yml
tests/specifications/40_workflow-automator/40_shell_scripts/: summary.yml
tests/specifications/70_harness/: 10_help.t  15_docker_creator.t  20_preparation.t  25_preparation_checker.t  30_docker.t  40_output_formats.t  41_docker_creator_output_formats.t  50_merges.t  70_preparation.t  75_preparation_checker.t  docker-build.bash
tests/specifications/70_harness/10_help/: summary.yml
tests/specifications/configured-workflows/: conf.tests-configuration  conf.tests-workflow  tests-bash-completion.sh  tests-commands  workflow-project.pl
tests/specifications/configured-workflows/tests-configuration-data/: node_configuration.yml
tests/specifications/dockerfiles/: Dockerfile.neurospaces-testing  Dockerfile.workflow  Dockerfile.workflow-errors  Dockerfile.workflow-feature-testing  docker-build-errors.bash  docker-build.bash  docker-run.bash  neurospaces-harness-docker-build.bash
tests/specifications/scripts/: sh_single_command.sh
tests/specifications/strings/: two-targets-added.txt
tests/specifications/workflow-configurations/feature-testing/: README.md  conf.feature-testing-configuration  feature-testing-commands-features  feature-testing-commands-more-python.py  feature-testing-commands-more_python.py  feature-testing-commands-perl_examples  feature-testing-commands-pure-python.py  feature-testing-commands-python_examples  feature-testing-commands-shell_scripts  feature-testing-configuration  tests-commands-features  tests-configuration  workflow-project.pl
tests/to-be-merged/100_high-level/: 100_high-level.t
tests/to-be-merged/110_mid-level/: 110_mid-level.t
tests/to-be-merged/111_low-level/: 111_low-level.t
vigilia/: introduction.html
vigilia/html/: index.html
vigilia/html/specifications/: 10_global.html  30_developer.html  40_workflow-automator.html  50_downloads.html  70_preparation.html  75_preparation_checker.html  developer.html  downloads.html  global.html  main.html
vigilia/html/specifications/40_workflow-automator/: 10_help-pages.html  20_new-project.html  25_new-project-docker.html  main.html
vigilia/html/specifications/70_harness/: 10_help.html  70_preparation.html  75_preparation_checker.html  main.html
vigilia/html/specifications/90_yaml/: 10_global.html  30_developer.html  50_downloads.html  main.html
vigilia/html/specifications/91_json/: 10_global.html  30_developer.html  50_downloads.html  main.html
vigilia/html/tests/specifications/: 10_global.html  30_developer.html  50_downloads.html  main.html
vigilia/specifications/20_vigilia/: 15_docker_creator.t  20_preparation.t  25_preparation_checker.t  30_docker.t  40_output_formats.t  41_docker_creator_output_formats.t  50_merges.t
vigilia/specifications/20_vigilia/10_help/: summary.yml
vigilia/specifications/20_vigilia/12_error_checking/: summary.yml
vigilia/specifications/40_workflow-automator/: 15_error-pages.t  25_new-project-docker.t  30_specific-features-cd.t  32_specific-features-export-sh.t  34_specific-features-annotations.t
vigilia/specifications/40_workflow-automator/15_error-pages/: summary.yml
vigilia/specifications/40_workflow-automator/25_new-project-docker/: summary.yml
vigilia/specifications/40_workflow-automator/25_smoke/: summary.yml
vigilia/specifications/40_workflow-automator/27_schedule/: summary.yml
vigilia/specifications/40_workflow-automator/31_specific-features-export-variables/: summary.yml
vigilia/specifications/40_workflow-automator/32_specific-features-export-sh/: summary.yml
vigilia/specifications/40_workflow-automator/33_specific-features-export-times/: summary.yml
vigilia/specifications/40_workflow-automator/36_specific-features-timestamps/: summary.yml
vigilia/specifications/40_workflow-automator/38_rename_project/: summary.yml
vigilia/specifications/40_workflow-automator/38_specific-features-background/: summary.yml
vigilia/specifications/40_workflow-automator/40_remote_script_execution/: summary.yml
vigilia/specifications/40_workflow-automator/46_builtin/: summary.yml
vigilia/specifications/dockerfiles/: Dockerfile.features-workflow-installed-testing  Dockerfile.neurospaces-testing  Dockerfile.workflow  Dockerfile.workflow-docker-role-testing  Dockerfile.workflow-errors  Dockerfile.workflow-feature-testing  Dockerfile.workflow-install-testing-debian  Dockerfile.workflow-install-testing-fedora  Dockerfile.workflow-install-testing-opensuse  Dockerfile.workflow-install-testing-ubuntu  docker-build-errors.bash  docker-build.bash  docker-run.bash  vigilia-docker-build.bash
vigilia/to-be-merged/111_low-level/: 111_low-level.t
(+312 files in other folders)
