##
## Neurospaces developer package: tools for Neurospaces and GENESIS 3
## software development.
##

##############################################################################
##'
##' Neurospaces development package.
##'
##' Copyright (C) 2007-2010 Hugo Cornelis
##'
##' Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################

perldir = $(prefix)/glue/swig/perl

nobase_dist_perl_DATA = @PERL_MODULES@

perldatadir = $(prefix)/neurospaces/developer

nobase_dist_perldata_DATA = @PERL_DATA@

